Change backend name to 'github' and specify repo

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: luckybajaj22031996/luckybajaj-blog
   branch: main
 
 media_folder: "static/images"
